--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.36",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "styled-components": "^6.3.11"
   },
   "homepage": "https://aidaprime.github.io/",
   "devDependencies": {
@@ -24,10 +26,10 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.0.0",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.3.1",
-    "gh-pages": "^6.0.0"
+    "vite": "^7.3.1"
   }
 }
